--- a/src/styles/blocks/header.pcss
+++ b/src/styles/blocks/header.pcss
@@ -32,7 +32,7 @@
         a{
             text-decoration: none;
             &:hover{
-                text-decoration: underline;
+                font-weight: 600;
             }
         }
     }
@@ -58,6 +58,9 @@
             opacity: .3;
             &:hover{
                 opacity: 1;
+                svg{
+                    fill: #FF9A00;
+                }
             }
         }
     }
