--- a/src/index.pug
+++ b/src/index.pug
@@ -84,8 +84,8 @@ html(lang="en")
                           circle(cx="50" cy="50" r="40").skill__circle--layer--under
                           circle(cx="50" cy="50" r="40" stroke="url(#gradient)" transform="rotate(180 50 50)").skill__circle--layer--above
                           linearGradient(id="gradient" x1="0%" x2="100%" y2="0%")
-                            stop(offeset="0%" stop-color="#D0731B")
-                            stop(offeset="100%" stop-color="#DC9322")
+                            stop(offset="0%" stop-color="#D0731B")
+                            stop(offset="100%" stop-color="#DC9322")
 
                         .skill__title #{skill}
     section.works
