fixed little bits

--- a/src/styles/blocks/footer-socials.pcss
+++ b/src/styles/blocks/footer-socials.pcss
@@ -20,6 +20,10 @@
         position: relative;
         &:hover{
             opacity: 1;
+            border-color: #FF9A00;
+            svg{
+                fill: #FF9A00;
+            }
         }
     }
 
