--- a/src/styles/blocks/footer.pcss
+++ b/src/styles/blocks/footer.pcss
@@ -34,7 +34,8 @@
             color: #FFF;
             text-decoration: none;
             &:hover{
-                text-decoration: underline;
+                font-weight: 600;
+                /* text-decoration: underline; */
             }
         }
     }
