--- a/src/styles/blocks/round-btn.pcss
+++ b/src/styles/blocks/round-btn.pcss
@@ -13,5 +13,12 @@
     svg{
         width: 17px;
         fill: #FFF;
+        
+    }
+    &:hover{
+        border-color: #FF9A00;
+        svg{
+            fill: #FF9A00;
+        }
     }
 }
