--- a/src/styles/blocks/footer-socials.pcss
+++ b/src/styles/blocks/footer-socials.pcss
@@ -38,4 +38,12 @@
         max-width: 21px;
         max-height: 21px;
     }
+
+    @include tablets() {
+        margin-bottom: 50px;
+    }
+
+    @include phones() {
+        margin-bottom: 31px;
+    }
 }
