--- a/src/styles/blocks/about.pcss
+++ b/src/styles/blocks/about.pcss
@@ -5,10 +5,21 @@
         justify-content: center;
         max-width: 1006px;
         color: #fff;
+
+        @include phones() {
+            flex-direction: column;
+            max-width: 100%;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     }
 
     &-person{
         margin-right: 100px;
+        @include phones() {
+            margin-right: 0;
+            margin-bottom: 50px;
+        }
     }
 
     &-content{
@@ -20,6 +31,11 @@
         }
         blockquote{
             margin-top: 77px;
+        }
+        @include tablets() {
+            blockquote{
+                margin-top: 36px;
+            }
         }
     }
 }
