--- a/src/styles/blocks/col.pcss
+++ b/src/styles/blocks/col.pcss
@@ -4,8 +4,38 @@
         padding-left: 15px;
         padding-right: 15px;
     }
+    &-3{
+        flex: 0 0 25%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
     &-4{
         flex: 0 0 33.33333%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    &-5{
+        flex: 0 0 41.66666%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    &-6{
+        flex: 0 0 50%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    &-8{
+        flex: 0 0 66.66666%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    &-9{
+        flex: 0 0 75%;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    &-12{
+        flex: 0 0 100%;
         padding-left: 15px;
         padding-right: 15px;
     }
@@ -16,5 +46,44 @@
     }
     &-4{
         margin-left: 33.33333%;
+    }
+    &-6{
+        margin-left: 50%;
+    }
+}
+
+@include desktop() {
+    .hide-from-xl{
+        display: none !important;
+    }
+}
+
+@include min_desktop() {
+    .show-only-md{
+        display: none !important;
+    }
+}
+
+@include min_tablets() {
+    .show-only-sm{
+        display: none !important;
+    }
+}
+
+@include tablets() {
+    .show-only-md{
+        display: none !important;
+    }
+}
+
+@include min_phones() {
+    .show-only-xs{
+        display: none !important;
+    }
+}
+
+@include phones() {
+    .show-only-sm{
+        display: none !important;
     }
 }
