--- a/src/styles/blocks/user.pcss
+++ b/src/styles/blocks/user.pcss
@@ -8,6 +8,9 @@
 
     &__avatar{
         padding-right: 30px;
+        @include phones() {
+            padding-right: 10px;
+        }
     }
 
     &__name{
@@ -15,11 +18,17 @@
         font-weight: 700;
         font-size: 18px;
         margin-bottom: 12px;
+        @include tablets() {
+            font-size: 16px;
+        }
     }
 
     &__position{
         opacity: .5;
         font-size: 16px;
         font-weight: 600;
+        @include tablets() {
+            font-size: 14px;
+        }
     }
 }
