--- a/src/styles/blocks/slider.pcss
+++ b/src/styles/blocks/slider.pcss
@@ -39,10 +39,10 @@
         width: 444px;
         padding-right: 60px;
         @include tablets() {
-            margin-right: 23px;
+            padding-right: 23px;
         }
         @include phones(){
-            margin-right: 0;
+            padding-right: 0;
         }
     }
 
