--- a/src/styles/blocks/square_btns.pcss
+++ b/src/styles/blocks/square_btns.pcss
@@ -14,7 +14,7 @@
         &--prev{
             transform: rotate(180deg);
         }
-        &.active{
+        &:hover{
             svg{
                 fill: #FFF;
             }
