--- a/src/styles/blocks/skills.pcss
+++ b/src/styles/blocks/skills.pcss
@@ -90,6 +90,7 @@
             margin-bottom: 55px;
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
             @include tablets() {
                 justify-content: center;
             }
