--- a/src/styles/blocks/general.pcss
+++ b/src/styles/blocks/general.pcss
@@ -4,6 +4,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    position: relative;
     &-welcome{
         padding-bottom: 50px;
     }
