--- a/src/styles/blocks/works.pcss
+++ b/src/styles/blocks/works.pcss
@@ -6,12 +6,12 @@
         @include phones() {
             text-align: center;
             margin-bottom: 40px;
-            // font-size: 24px;
         }
     }
 
     &-preview{  
         display: flex;
+        flex-wrap: wrap;
         &__thumbs{
             position: absolute;
             right: 25px;
