--- a/src/admin/components/skill/skill.pcss
+++ b/src/admin/components/skill/skill.pcss
@@ -3,6 +3,15 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    position: relative;
+
+    .validation{
+        position: absolute;
+        color: #F00;
+        top: -20px;
+        left: 0;
+        z-index: 10;
+    }
 }
 
 .flex{
