--- a/src/admin/components/skill/skill.pcss
+++ b/src/admin/components/skill/skill.pcss
@@ -7,8 +7,8 @@
 
     .validation{
         position: absolute;
-        color: #F00;
-        top: -20px;
+        // color: #F00;
+        bottom: -42px;
         left: 0;
         z-index: 10;
     }
